tests/errors/comprehensive/E3014_incompatible_binary.ez
/*
 * Error Test: E3014 - incompatible-binary-types
 * Expected: "unknown operator"
 */

do main() {
    temp result = "hello" - 5  // Cannot subtract int from string
}
